[#813] Boxed expressions validation: Add extra validation for DecisionTable, FunctionDefinition and Invocation.